[gd_scene load_steps=9 format=2]

[ext_resource path="res://assets/fonts/Roboto-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://screens/MainMenu/MainMenu.gd" type="Script" id=2]
[ext_resource path="res://assets/fonts/Arcade.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://assets/backgrounds/Nebula Aqua-Pink-small.png" type="Texture" id=4]
[ext_resource path="res://assets/music/BoxCat_Games_Assignment.ogg" type="AudioStream" id=5]

[sub_resource type="DynamicFont" id=1]
size = 24
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="Theme" id=2]
default_font = SubResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 120
font_data = ExtResource( 3 )

[node name="MainMenu" type="Control"]
editor/display_folded = true
anchor_right = 1.0
anchor_bottom = 1.0
theme = SubResource( 2 )
script = ExtResource( 2 )

[node name="MenuContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 0
grow_vertical = 0

[node name="Control" type="VBoxContainer" parent="MenuContainer"]
margin_left = 635.0
margin_top = 375.0
margin_right = 1285.0
margin_bottom = 704.0
alignment = 1

[node name="Title" type="Label" parent="MenuContainer/Control"]
margin_right = 650.0
margin_bottom = 243.0
custom_fonts/font = SubResource( 3 )
text = "The invasion
"

[node name="StartGameButton" type="Button" parent="MenuContainer/Control"]
margin_top = 247.0
margin_right = 650.0
margin_bottom = 286.0
text = "Start game"

[node name="OptionsButton" type="Button" parent="MenuContainer/Control"]
margin_top = 290.0
margin_right = 650.0
margin_bottom = 329.0
text = "Options"

[node name="OptionsPanel" type="PopupPanel" parent="MenuContainer"]
margin_left = 831.0
margin_top = 458.0
margin_right = 1089.0
margin_bottom = 621.0
popup_exclusive = true

[node name="VerticalContainer" type="VBoxContainer" parent="MenuContainer/OptionsPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 4.0
margin_right = -4.0
margin_bottom = -4.0
alignment = 1

[node name="Fullscreen" type="HBoxContainer" parent="MenuContainer/OptionsPanel/VerticalContainer"]
margin_right = 250.0
margin_bottom = 41.0
alignment = 1

[node name="Button" type="CheckBox" parent="MenuContainer/OptionsPanel/VerticalContainer/Fullscreen"]
margin_right = 250.0
margin_bottom = 41.0
rect_min_size = Vector2( 250, 0 )
focus_mode = 0
shortcut_in_tooltip = false
enabled_focus_mode = 0
text = "Full screen"

[node name="MasterVolume" type="HBoxContainer" parent="MenuContainer/OptionsPanel/VerticalContainer"]
margin_top = 45.0
margin_right = 250.0
margin_bottom = 79.0

[node name="Slider" type="HSlider" parent="MenuContainer/OptionsPanel/VerticalContainer/MasterVolume"]
margin_right = 150.0
margin_bottom = 34.0
rect_min_size = Vector2( 150, 34 )
value = 100.0
ticks_on_borders = true

[node name="Label" type="Label" parent="MenuContainer/OptionsPanel/VerticalContainer/MasterVolume"]
margin_left = 154.0
margin_right = 230.0
margin_bottom = 33.0
text = "Master"

[node name="MusicVolume" type="HBoxContainer" parent="MenuContainer/OptionsPanel/VerticalContainer"]
margin_top = 83.0
margin_right = 250.0
margin_bottom = 117.0

[node name="Slider" type="HSlider" parent="MenuContainer/OptionsPanel/VerticalContainer/MusicVolume"]
margin_right = 150.0
margin_bottom = 34.0
rect_min_size = Vector2( 150, 34 )
value = 100.0
ticks_on_borders = true

[node name="Label" type="Label" parent="MenuContainer/OptionsPanel/VerticalContainer/MusicVolume"]
margin_left = 154.0
margin_right = 221.0
margin_bottom = 33.0
text = "Music"

[node name="SFXVolume" type="HBoxContainer" parent="MenuContainer/OptionsPanel/VerticalContainer"]
margin_top = 121.0
margin_right = 250.0
margin_bottom = 155.0

[node name="Slider" type="HSlider" parent="MenuContainer/OptionsPanel/VerticalContainer/SFXVolume"]
margin_right = 150.0
margin_bottom = 34.0
rect_min_size = Vector2( 150, 34 )
value = 100.0
ticks_on_borders = true

[node name="Label" type="Label" parent="MenuContainer/OptionsPanel/VerticalContainer/SFXVolume"]
margin_left = 154.0
margin_right = 198.0
margin_bottom = 33.0
text = "SFX"

[node name="Background" type="TextureRect" parent="."]
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
rect_clip_content = true
mouse_filter = 2
texture = ExtResource( 4 )
expand = true
stretch_mode = 3
__meta__ = {
"_edit_lock_": true
}

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = -20.0
autoplay = true
bus = "music"

[connection signal="pressed" from="MenuContainer/Control/StartGameButton" to="." method="_on_StartGameButton_pressed"]
[connection signal="pressed" from="MenuContainer/Control/OptionsButton" to="." method="_on_OptionsButton_pressed"]
[connection signal="about_to_show" from="MenuContainer/OptionsPanel" to="." method="_on_OptionsPanel_about_to_show"]
[connection signal="toggled" from="MenuContainer/OptionsPanel/VerticalContainer/Fullscreen/Button" to="." method="_on_Fullscreen_toggled"]
[connection signal="value_changed" from="MenuContainer/OptionsPanel/VerticalContainer/MasterVolume/Slider" to="." method="_on_MasterVolume_changed"]
[connection signal="value_changed" from="MenuContainer/OptionsPanel/VerticalContainer/MusicVolume/Slider" to="." method="_on_MusicVolume_changed"]
[connection signal="value_changed" from="MenuContainer/OptionsPanel/VerticalContainer/SFXVolume/Slider" to="." method="_on_SFXVolume_changed"]
